<resources>
    <string name="app_name">FishingManager</string>
    <string name="cancel">취소</string>
    <string name="check">확인</string>
    <string name="choice">선택</string>
    <string name="choice2">선 택</string>
    <string name="choice_all">전체 선택</string>
    <string name="search">검색</string>
    <string name="previous">이전</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>
    <string name="complete2">완 료</string>
    <string name="input">입력</string>
    <string name="title">제목</string>
    <string name="content">내용</string>
    <string name="writer">작성자</string>
    <string name="date">날짜</string>
    <string name="loading">로딩중…</string>
    <string name="failure_load_data">데이터를 불러올 수 없습니다.</string>
    <string name="refresh">새로 고침</string>
    <string name="splash_loading_0">서버 데이터 로딩중…</string>
    <string name="splash_loading_25">생활해양 예보를 로딩중…</string>
    <string name="splash_loading_50">조석 예보를 로딩중…</string>
    <string name="splash_loading_75">날씨 정보를 로딩중…</string>
    <string name="splash_loading_100">로딩 완료 !</string>
    <string name="splash_loading_failure">서버의 일시적 장애로 인해\n데이터를 불러오지 못했습니다.\n\n잠시 후 다시 실행해 주세요.</string>
    <string name="start_login">로그인</string>
    <string name="start_signup">회원가입</string>
    <string name="start_id">아이디</string>
    <string name="start_password">비밀번호</string>
    <string name="start_email">이메일</string>
    <string name="start_nickname">닉네임</string>
    <string name="start_socialLogin">SNS 계정으로 로그인</string>
    <string name="start_findPassword">비밀번호 찾기</string>
    <string name="start_login_failure">아이디 또는 비밀번호를 확인해 주세요.</string>
    <string name="start_signup_1page_main">사용하실 이메일을\n입력해 주세요.</string>
    <string name="start_signup_2page_main">입력하신 이메일로\n인증 번호가 발송되었어요.</string>
    <string name="start_signup_3page_main">사용하실 비밀번호를\n입력해 주세요.</string>
    <string name="start_signup_4page_main">비밀번호를 한 번 더\n입력해 주세요.</string>
    <string name="start_signup_5page_main">사용하실 닉네임을\n입력해 주세요.</string>
    <string name="start_signup_6page_main">입력하신 정보를\n확인해 주세요.</string>
    <string name="start_signup_1page_sub">입력하신 이메일로 인증 번호가 발송됩니다.</string>
    <string name="start_signup_3page_sub">비밀번호는 영문자, 숫자, 특수문자를\n포함하여 8~16자로 사용해 주세요.</string>
    <string name="start_signup_5page_sub">닉네임은 2~8자로 사용하실 수 있으며\n추후 변경이 불가합니다.</string>
    <string name="start_signup_1page_valid_using">이미 사용 중인 이메일입니다.</string>
    <string name="start_signup_1page_valid_not_input">이메일을 입력해주세요.</string>
    <string name="start_signup_2page_valid_timeOut">인증 시간이 만료되었습니다.</string>
    <string name="start_signup_2page_valid_mismatch">인증 번호가 일치하지 않습니다.</string>
    <string name="start_signup_3page_valid_true">사용 가능한 비밀번호 입니다.</string>
    <string name="start_signup_3page_valid_false">비밀번호 양식에 맞게 입력해 주세요.</string>
    <string name="start_signup_4page_valid">비밀번호가 일치하지 않습니다.</string>
    <string name="start_signup_5page_valid_using">이미 사용 중인 닉네임입니다.</string>
    <string name="start_signup_5page_valid_false">닉네임 양식에 맞게 입력해 주세요.</string>
    <string name="start_resend">재전송</string>
    <string name="start_resend_info">인증 번호가 오지 않나요?</string>
    <string name="start_signup_back">초기 화면으로 돌아가면\n작성한 내용이 모두 사라집니다.\n\n이동하시겠습니까?</string>
    <string name="start_signup_1page_hint">example@google.com</string>
    <string name="start_signup_2page_hint">인증 번호 입력</string>
    <string name="start_signup_3page_hint">비밀번호 입력</string>
    <string name="start_signup_4page_hint">비밀번호 재입력</string>
    <string name="start_signup_5page_hint">닉네임 입력</string>
    <string name="start_signup_1page">1/6</string>
    <string name="start_signup_2page">2/6</string>
    <string name="start_signup_3page">3/6</string>
    <string name="start_signup_4page">4/6</string>
    <string name="start_signup_5page">5/6</string>
    <string name="start_signup_6page">6/6</string>
    <string name="start_signup_google_1page">1/2</string>
    <string name="start_signup_google_2page">2/2</string>
    <string name="start_findPassword_1page_main">비밀번호를 찾고자하는\n이메일을 입력해 주세요.</string>
    <string name="start_findPassword_2page_main">입력하신 이메일로\n인증 번호가 발송되었어요.</string>
    <string name="start_findPassword_3page_main">사용하실 비밀번호를\n입력해 주세요.</string>
    <string name="start_findPassword_4page_main">비밀번호를 한 번 더\n입력해 주세요.</string>
    <string name="start_findPassword_1page_sub">입력하신 이메일로 인증 번호가 발송됩니다.</string>
    <string name="start_findPassword_3page_sub">비밀번호는 영문자, 숫자, 특수문자를\n포함하여 8~16자로 사용해 주세요.</string>
    <string name="start_findPassword_1page_valid">가입되지 않은 이메일 입니다.</string>
    <string name="start_findPassword_2page_valid_timeOut">인증 시간이 만료되었습니다.</string>
    <string name="start_findPassword_2page_valid_mismatch">인증 번호가 일치하지 않습니다.</string>
    <string name="start_findPassword_3page_valid">비밀번호 양식에 맞게 입력해 주세요.</string>
    <string name="start_findPassword_4page_valid">비밀번호가 일치하지 않습니다.</string>
    <string name="start_findPassword_1page">1/4</string>
    <string name="start_findPassword_2page">2/4</string>
    <string name="start_findPassword_3page">3/4</string>
    <string name="start_findPassword_4page">4/4</string>
    <string name="start_findPassword_1page_hint">example@google.com</string>
    <string name="start_findPassword_2page_hint">인증 번호 입력</string>
    <string name="start_findPassword_3page_hint">비밀번호 입력</string>
    <string name="start_findPassword_4page_hint">비밀번호 재입력</string>
    <string name="home_weather">날씨</string>
    <string name="home_title">홈</string>
    <string name="home_recommend">추천 장소 &amp; 어종</string>
    <string name="home_recentCollection">최근 잡은 물고기</string>
    <string name="home_recentCollection_seeMore">+ 자세히보기</string>
    <string name="home_HotFeed">이 달의 HOT 게시글</string>
    <string name="condition_combine_title">통합 컨디션</string>
    <string name="condition_weather_title">날씨</string>
    <string name="condition_tide_title">조석</string>
    <string name="condition_index_title">지수</string>
    <string name="condition_select_date_title">날짜 선택</string>
    <string name="condition_search_location_title">장소 검색</string>
    <string name="condition_select_fish_title">어종 선택</string>
    <string name="condition_combine">통 합</string>
    <string name="condition_weather">날 씨</string>
    <string name="condition_tide">조 석</string>
    <string name="condition_index">지 수</string>
    <string name="condition_index_am">오전</string>
    <string name="condition_index_pm">오후</string>
    <string name="condition_index_waterTemp">수온</string>
    <string name="condition_index_waveHeight">파고</string>
    <string name="condition_index_tide">조석</string>
    <string name="condition_index_total">종합</string>
    <string name="condition_index_very_bad">매우 안 좋음</string>
    <string name="condition_index_bad">안 좋음</string>
    <string name="condition_index_normal">보통</string>
    <string name="condition_index_good">좋음</string>
    <string name="condition_index_very_good">매우 좋음</string>
    <string name="checkingFish_title">어종 확인</string>
    <string name="checkingFish_result_title">확인 결과</string>
    <string name="checkingFish_limitCount">금일 남은 횟수 3 / 3</string>
    <string name="checkingFish_history">기록</string>
    <string name="checkingFish_result_save">내 기록에 저장</string>
    <string name="checkingFish_result_write">내 기록에 저장 후 게시글 작성</string>
    <string name="checkingFish_take_picture_again">다시 촬영</string>
    <string name="checkingFish_classify">검출</string>
    <string name="feed_title">게시글</string>
    <string name="feed_viewCount">조회수</string>
    <string name="feed_input_comment">댓글 입력</string>
    <string name="write_title">작성</string>
    <string name="write_limit">0 / 1000</string>
    <string name="write_cancel">현재까지 작성된 내용이 사라집니다.\n뒤로 가기를 하시겠습니까?</string>
    <string name="write_save">게시글을 등록하시겠습니까?</string>
    <string name="profile_title">프로필</string>
    <string name="profile_select_fish_title">어종 선택</string>
    <string name="profile_select_length_title">길이 선택</string>
    <string name="profile_select_date_title">날짜 선택</string>
    <string name="profile_collection">도감</string>
    <string name="profile_history">기록</string>
    <string name="profile_fish">종류</string>
    <string name="profile_length">길이</string>
    <string name="profile_date">날짜</string>
    <string name="profile_purchase_ticket">이용권 구매</string>
    <string name="profile_logout">로그아웃</string>
    <string name="profile_delete_account">회원탈퇴</string>
    <string name="profile_logout_dialog">로그아웃 하시겠습니까?</string>
    <string name="profile_delete_account_dialog">회원탈퇴와 함께 등록된 모든\n개인 정보는 삭제 처리되며\n복구되지 않습니다.\n\n회원탈퇴 하시겠습니까?</string>
    <string name="profile_select_length_all">전 체</string>
    <string name="profile_select_length_30cm">~ 30cm</string>
    <string name="profile_select_length_60cm">31cm ~ 60cm</string>
    <string name="profile_select_length_99cm">61cm ~ 99cm</string>
    <string name="profile_select_length_1m">1m ~</string>
    <string name="pay_title">이용권 구매</string>
    <string name="pay_set_month">FM 세트 한 달 이용권</string>
    <string name="pay_set_year">FM 세트 일 년 이용권</string>
    <string name="pay_checkingFish_month">어종 확인 한 달 이용권</string>
    <string name="pay_checkingFish_year">어종 확인 일 년 이용권</string>
    <string name="pay_removeAD_month">광고 제거 한 달 이용권</string>
    <string name="pay_removeAD_year">광고 제거 일 년 이용권</string>
    <string name="pay_month">30일</string>
    <string name="pay_year">365일</string>
    <string name="pay_4900">￦ 4,900 / 월</string>
    <string name="pay_49000">￦ 49,000 / 년</string>
    <string name="pay_3900">￦ 3,900 / 월</string>
    <string name="pay_39000">￦ 39,000 / 년</string>
    <string name="pay_1900">￦ 1,900 / 월</string>
    <string name="pay_19000">￦ 19,000 / 년</string>
    <string name="condition_calendar_info">정확도를 위해 3일간의 데이터만 제공됩니다.</string>

    <string-array name="custom_weekdays">
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
        <item>일</item>
    </string-array>

    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>

    <string-array name="feed_type">
        <item>제목</item>
        <item>닉네임</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>