<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    
    <data>
        
        <variable
            name="feed"
            type="com.example.fishingmanager.data.Feed" />

        <variable
            name="clickListener"
            type="com.example.fishingmanager.adapter.FeedAdapter.ItemClickListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="2dp"
        android:orientation="vertical"
        android:background="#00000000"
        android:onClick="@{()->clickListener.onClick(feed)}"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:paddingHorizontal="10dp"
                >

                <TextView
                    android:id="@+id/feedItemTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <ImageView
                    android:id="@+id/feedItemImageView"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/feedimage"
                    android:scaleType="fitCenter"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:paddingHorizontal="10dp"
                >

                <TextView
                    android:id="@+id/feedItemWriterTextView"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/writer"
                    android:textColor="@color/gray2"
                    />

                <TextView
                    android:id="@+id/feedItemViewCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feed_viewCount"
                    android:textColor="@color/gray2"
                    android:textAlignment="viewStart"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/feedItemWriteDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/gray2"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>